:bug: Fix: ZSET에 추가할 때 limit 범위 수정